Add error-prone and fix warnings